# shopping-inteventory-service

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  swagger.json  swagger.yaml
.github/workflows/: deploy.yml  docker-image.yml  integration-tests.yml  orders-listener.yml  python.yml  terraform.yml
docs/: api.md  architecture.md  cicd.md  local-dev.md  order_listener.md  runbooks.md  terraform.md
infra/local/: seed_firestore_emulator.py
infra/terraform/: artifact_registry.tf  cloud_functions.tf  cloud_run.tf  iam_artifact_registry.tf  outputs.tf  secretmanager.tf  services.tf  variables.tf  versions.tf
infra/terraform/envs/ci/: terraform.tfvars
integration_tests/: conftest.py  docker-compose.yml  firebase.json  seed_firestore_emulator.py  test_integration_flow.py  wait_for_firestore.sh
notebooks/: inventory_api_from_swagger.ipynb
services/api/: Dockerfile
services/api/src/: .env.example  config.py  deps.py  main.py
services/api/src/routers/: auth.py  orders.py
services/api/src/security/: jwt.py  password.py
services/api/src/services/: users.py  (+2 more)
services/api/tests/: conftest.py  test_auth.py  test_jwt.py  test_orders.py
services/orders_listener/: .env.example  main.py
services/orders_listener/bridge/: bridge.py
services/orders_listener/src/: config.py  email_client.py  firestore_client.py  main.py
services/orders_listener/tests/: conftest.py  test_config.py  test_email_client.py  test_firestore_client.py  test_main.py
terraform/: apis.tf  cloud_functions.tf  github_actions_sa.tf  main.tf  outputs.tf
(+1 files in other folders)
